# Crypto-Analytical-Pipeline

./: .gitignore  README.md  api_symbol_fetcher.py  colab_example.py  config.py  downloader.py  interfaces.py  main.py  orchestrator.py  pipeline.py  pyproject.toml  symbol_fetcher.py  test_integration.py  verifier.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/: schema.yml  stg_klines.sql
flows/: pipeline_flow.py
src/: config.py  extractor.py  loader.py  pipeline.py  schema_monitor.py  symbol_fetcher.py  verifier.py
src/crypto_pipeline/: config.py  downloader.py  extractor.py  interfaces.py  loader.py  schema_monitor.py  symbol_fetcher.py  verifier.py
tests/: test_downloader.py  test_integration.py  test_option_config.py  test_schema_monitor.py  test_symbol_fetcher.py  test_verifier.py
